k8s/ingress-bot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labay-poly-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - labay-bot.atech-bot.click
      secretName: cert-bot
  rules:
  - host: labay-bot.atech-bot.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: poly-service
            port:
              number: 8443
  ingressClassName: nginx
